Fix evaluate function calls: Use correct parameter names (model instead of chain_model/multi_output_model)

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -2935,10 +2935,8 @@
     "                \n",
     "                print(f\"\\n📊 Step 3/3: Evaluating...\")\n",
     "                test_results = evaluate_classifier_chain(\n",
-    "                    chain_model=chain_model,\n",
-    "                    bert_model=bert_model,\n",
+    "                    model=chain_model,\n",
     "                    test_dataloader=test_dataloader,\n",
-    "                    device=BASE_CONFIG['device'],\n",
     "                    label_names=label_names\n",
     "                )\n",
     "            \n",
@@ -2955,10 +2953,8 @@
     "                \n",
     "                print(f\"\\n📊 Step 3/3: Evaluating...\")\n",
     "                test_results = evaluate_multi_output_classifier(\n",
-    "                    multi_output_model=multi_output_model,\n",
-    "                    bert_model=bert_model,\n",
+    "                    model=multi_output_model,\n",
     "                    test_dataloader=test_dataloader,\n",
-    "                    device=BASE_CONFIG['device'],\n",
     "                    label_names=label_names\n",
     "                )\n",
     "        \n",
