Add mAP metric to evaluate functions and update comparison plots with individual charts

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -3024,12 +3024,14 @@
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
     "            'Training Time (min)': data.get('training_time_min', 0),\n",
+    "            'Micro Precision': results.get('micro_precision', 0),\n",
+    "            'Micro Recall': results.get('micro_recall', 0),\n",
     "            'Micro F1': results.get('micro_f1', 0),\n",
     "            'mAP': results.get('mean_average_precision', 0),\n",
-    "            'Recall@5': results.get('recall_at_5', 0),\n",
-    "            'Precision@5': results.get('precision_at_5', 0),\n",
     "            'Hamming Loss': results.get('hamming_loss', 0),\n",
-    "            'Subset Accuracy': results.get('example_based_accuracy', 0)\n",
+    "            'Example-based Accuracy': results.get('example_based_accuracy', 0),\n",
+    "            'Recall@5': results.get('recall_at_5', 0),\n",
+    "            'Precision@5': results.get('precision_at_5', 0)\n",
     "        })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
@@ -3053,41 +3055,156 @@
     "        improvement = ((best_map - baseline_map) / baseline_map * 100) if baseline_map > 0 else 0\n",
     "        print(f\"   Baseline'a göre mAP iyileştirme: {improvement:+.2f}%\")\n",
     "    \n",
-    "    # Plot comparison\n",
+    "    # Save comparison to CSV\n",
+    "    csv_path = 'outputs/hybrid_strategies_comparison.csv'\n",
+    "    os.makedirs('outputs', exist_ok=True)\n",
+    "    df_comparison.to_csv(csv_path, index=False)\n",
+    "    print(f\"\\n💾 CSV saved: {csv_path}\")\n",
+    "    \n",
+    "    # Plot comparison - individual plots\n",
     "    if len(all_test_results) > 1:\n",
-    "        fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+    "        plots_dir = 'outputs/hybrid_strategies_plots'\n",
+    "        os.makedirs(plots_dir, exist_ok=True)\n",
     "        \n",
-    "        # mAP and F1 scores comparison\n",
     "        strategies = df_comparison['Strategy'].tolist()\n",
-    "        mean_ap = df_comparison['mAP'].tolist()\n",
-    "        micro_f1 = df_comparison['Micro F1'].tolist()\n",
-    "        \n",
     "        x = np.arange(len(strategies))\n",
+    "        \n",
+    "        # 1. Micro Precision\n",
+    "        fig1, ax1 = plt.subplots(figsize=(10, 6))\n",
+    "        ax1.bar(x, df_comparison['Micro Precision'].tolist(), alpha=0.8, color='skyblue')\n",
+    "        ax1.set_xlabel('Strategy', fontsize=12)\n",
+    "        ax1.set_ylabel('Micro Precision', fontsize=12)\n",
+    "        ax1.set_title('Hybrid Strategies: Micro Precision Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax1.set_xticks(x)\n",
+    "        ax1.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax1.grid(axis='y', alpha=0.3)\n",
+    "        ax1.set_ylim([0, 1])\n",
+    "        for i, v in enumerate(df_comparison['Micro Precision'].tolist()):\n",
+    "            ax1.text(i, v + 0.02, f'{v:.3f}', ha='center', va='bottom', fontsize=9)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/micro_precision.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 2. Micro Recall\n",
+    "        fig2, ax2 = plt.subplots(figsize=(10, 6))\n",
+    "        ax2.bar(x, df_comparison['Micro Recall'].tolist(), alpha=0.8, color='lightcoral')\n",
+    "        ax2.set_xlabel('Strategy', fontsize=12)\n",
+    "        ax2.set_ylabel('Micro Recall', fontsize=12)\n",
+    "        ax2.set_title('Hybrid Strategies: Micro Recall Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax2.set_xticks(x)\n",
+    "        ax2.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax2.grid(axis='y', alpha=0.3)\n",
+    "        ax2.set_ylim([0, 1])\n",
+    "        for i, v in enumerate(df_comparison['Micro Recall'].tolist()):\n",
+    "            ax2.text(i, v + 0.02, f'{v:.3f}', ha='center', va='bottom', fontsize=9)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/micro_recall.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 3. Hamming Loss\n",
+    "        fig3, ax3 = plt.subplots(figsize=(10, 6))\n",
+    "        ax3.bar(x, df_comparison['Hamming Loss'].tolist(), alpha=0.8, color='orange')\n",
+    "        ax3.set_xlabel('Strategy', fontsize=12)\n",
+    "        ax3.set_ylabel('Hamming Loss', fontsize=12)\n",
+    "        ax3.set_title('Hybrid Strategies: Hamming Loss Comparison (Lower is Better)', fontsize=14, fontweight='bold')\n",
+    "        ax3.set_xticks(x)\n",
+    "        ax3.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax3.grid(axis='y', alpha=0.3)\n",
+    "        for i, v in enumerate(df_comparison['Hamming Loss'].tolist()):\n",
+    "            ax3.text(i, v + 0.001, f'{v:.4f}', ha='center', va='bottom', fontsize=9)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/hamming_loss.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 4. mAP (Mean Average Precision)\n",
+    "        fig4, ax4 = plt.subplots(figsize=(10, 6))\n",
+    "        ax4.bar(x, df_comparison['mAP'].tolist(), alpha=0.8, color='green')\n",
+    "        ax4.set_xlabel('Strategy', fontsize=12)\n",
+    "        ax4.set_ylabel('mAP', fontsize=12)\n",
+    "        ax4.set_title('Hybrid Strategies: Mean Average Precision (mAP) Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax4.set_xticks(x)\n",
+    "        ax4.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax4.grid(axis='y', alpha=0.3)\n",
+    "        ax4.set_ylim([0, 1])\n",
+    "        for i, v in enumerate(df_comparison['mAP'].tolist()):\n",
+    "            ax4.text(i, v + 0.02, f'{v:.3f}', ha='center', va='bottom', fontsize=9)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/map.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 5. Example-based Accuracy\n",
+    "        fig5, ax5 = plt.subplots(figsize=(10, 6))\n",
+    "        ax5.bar(x, df_comparison['Example-based Accuracy'].tolist(), alpha=0.8, color='purple')\n",
+    "        ax5.set_xlabel('Strategy', fontsize=12)\n",
+    "        ax5.set_ylabel('Example-based Accuracy', fontsize=12)\n",
+    "        ax5.set_title('Hybrid Strategies: Example-based Accuracy Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax5.set_xticks(x)\n",
+    "        ax5.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax5.grid(axis='y', alpha=0.3)\n",
+    "        ax5.set_ylim([0, 1])\n",
+    "        for i, v in enumerate(df_comparison['Example-based Accuracy'].tolist()):\n",
+    "            ax5.text(i, v + 0.02, f'{v:.3f}', ha='center', va='bottom', fontsize=9)\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/example_based_accuracy.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # Combined plot (4 panels)\n",
+    "        fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "        \n",
+    "        # Panel 1: Micro Precision & Recall\n",
     "        width = 0.35\n",
+    "        axes[0, 0].bar(x - width/2, df_comparison['Micro Precision'].tolist(), width, label='Precision', alpha=0.8, color='skyblue')\n",
+    "        axes[0, 0].bar(x + width/2, df_comparison['Micro Recall'].tolist(), width, label='Recall', alpha=0.8, color='lightcoral')\n",
+    "        axes[0, 0].set_xlabel('Strategy')\n",
+    "        axes[0, 0].set_ylabel('Score')\n",
+    "        axes[0, 0].set_title('Micro Precision & Recall Comparison')\n",
+    "        axes[0, 0].set_xticks(x)\n",
+    "        axes[0, 0].set_xticklabels(strategies, rotation=45, ha='right', fontsize=8)\n",
+    "        axes[0, 0].legend()\n",
+    "        axes[0, 0].grid(axis='y', alpha=0.3)\n",
+    "        axes[0, 0].set_ylim([0, 1])\n",
     "        \n",
-    "        axes[0].bar(x - width/2, mean_ap, width, label='mAP (Ranking)', alpha=0.8, color='green')\n",
-    "        axes[0].bar(x + width/2, micro_f1, width, label='Micro F1', alpha=0.8, color='blue')\n",
-    "        axes[0].set_xlabel('Strategy')\n",
-    "        axes[0].set_ylabel('Score')\n",
-    "        axes[0].set_title('mAP & Micro F1 Comparison')\n",
-    "        axes[0].set_xticks(x)\n",
-    "        axes[0].set_xticklabels(strategies, rotation=45, ha='right')\n",
-    "        axes[0].legend()\n",
-    "        axes[0].grid(axis='y', alpha=0.3)\n",
+    "        # Panel 2: Hamming Loss\n",
+    "        axes[0, 1].bar(x, df_comparison['Hamming Loss'].tolist(), alpha=0.8, color='orange')\n",
+    "        axes[0, 1].set_xlabel('Strategy')\n",
+    "        axes[0, 1].set_ylabel('Hamming Loss')\n",
+    "        axes[0, 1].set_title('Hamming Loss (Lower is Better)')\n",
+    "        axes[0, 1].set_xticks(x)\n",
+    "        axes[0, 1].set_xticklabels(strategies, rotation=45, ha='right', fontsize=8)\n",
+    "        axes[0, 1].grid(axis='y', alpha=0.3)\n",
     "        \n",
-    "        # Recall@5 comparison\n",
-    "        recall_at_5 = df_comparison['Recall@5'].tolist()\n",
+    "        # Panel 3: mAP\n",
+    "        axes[1, 0].bar(x, df_comparison['mAP'].tolist(), alpha=0.8, color='green')\n",
+    "        axes[1, 0].set_xlabel('Strategy')\n",
+    "        axes[1, 0].set_ylabel('mAP')\n",
+    "        axes[1, 0].set_title('Mean Average Precision (Ranking Quality)')\n",
+    "        axes[1, 0].set_xticks(x)\n",
+    "        axes[1, 0].set_xticklabels(strategies, rotation=45, ha='right', fontsize=8)\n",
+    "        axes[1, 0].grid(axis='y', alpha=0.3)\n",
+    "        axes[1, 0].set_ylim([0, 1])\n",
     "        \n",
-    "        axes[1].bar(x, recall_at_5, alpha=0.8, color='coral')\n",
-    "        axes[1].set_xlabel('Strategy')\n",
-    "        axes[1].set_ylabel('Recall@5 (Top-5 Coverage)')\n",
-    "        axes[1].set_title('Recall@5 Comparison')\n",
-    "        axes[1].set_xticks(x)\n",
-    "        axes[1].set_xticklabels(strategies, rotation=45, ha='right')\n",
-    "        axes[1].grid(axis='y', alpha=0.3)\n",
+    "        # Panel 4: Example-based Accuracy\n",
+    "        axes[1, 1].bar(x, df_comparison['Example-based Accuracy'].tolist(), alpha=0.8, color='purple')\n",
+    "        axes[1, 1].set_xlabel('Strategy')\n",
+    "        axes[1, 1].set_ylabel('Example-based Accuracy')\n",
+    "        axes[1, 1].set_title('Example-based Accuracy (Exact Match)')\n",
+    "        axes[1, 1].set_xticks(x)\n",
+    "        axes[1, 1].set_xticklabels(strategies, rotation=45, ha='right', fontsize=8)\n",
+    "        axes[1, 1].grid(axis='y', alpha=0.3)\n",
+    "        axes[1, 1].set_ylim([0, 1])\n",
     "        \n",
     "        plt.tight_layout()\n",
+    "        combined_plot_path = f'{plots_dir}/hybrid_strategies_comparison_all.png'\n",
+    "        plt.savefig(combined_plot_path, dpi=300, bbox_inches='tight')\n",
     "        plt.show()\n",
+    "        \n",
+    "        print(f\"\\n📊 Plots saved:\")\n",
+    "        print(f\"    - {plots_dir}/hybrid_strategies_comparison_all.png (combined)\")\n",
+    "        print(f\"    - {plots_dir}/micro_precision.png\")\n",
+    "        print(f\"    - {plots_dir}/micro_recall.png\")\n",
+    "        print(f\"    - {plots_dir}/hamming_loss.png\")\n",
+    "        print(f\"    - {plots_dir}/map.png\")\n",
+    "        print(f\"    - {plots_dir}/example_based_accuracy.png\")\n",
     "    \n",
     "    print(\"\\n\")"
    ]
