Update save results cell to download CSV and all plot files

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -3257,21 +3257,23 @@
     "    \n",
     "    print(f\"✅ Sonuçlar kaydedildi: {results_file}\")\n",
     "    \n",
-    "    # Save comparison table to CSV\n",
+    "    # Save comparison table to CSV (same format as comparison cell)\n",
     "    comparison_data = []\n",
     "    for strategy_name, data in all_test_results.items():\n",
     "        results = data['results']\n",
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
     "            'Training_Time_min': data.get('training_time_min', 0),\n",
-    "            'mAP': results.get('mean_average_precision', 0),\n",
+    "            'Micro_Precision': results.get('micro_precision', 0),\n",
+    "            'Micro_Recall': results.get('micro_recall', 0),\n",
     "            'Micro_F1': results.get('micro_f1', 0),\n",
+    "            'mAP': results.get('mean_average_precision', 0),\n",
+    "            'Hamming_Loss': results.get('hamming_loss', 0),\n",
+    "            'Example_based_Accuracy': results.get('example_based_accuracy', 0),\n",
     "            'Recall_at_5': results.get('recall_at_5', 0),\n",
     "            'Precision_at_5': results.get('precision_at_5', 0),\n",
     "            'Recall_at_10': results.get('recall_at_10', 0),\n",
-    "            'Precision_at_10': results.get('precision_at_10', 0),\n",
-    "            'Hamming_Loss': results.get('hamming_loss', 0),\n",
-    "            'Subset_Accuracy': results.get('example_based_accuracy', 0)\n",
+    "            'Precision_at_10': results.get('precision_at_10', 0)\n",
     "        })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
@@ -3280,14 +3282,39 @@
     "    \n",
     "    print(f\"✅ CSV tablosu kaydedildi: {csv_file}\")\n",
     "    \n",
+    "    # Collect all plot files to download\n",
+    "    files_to_download = [results_file, csv_file]\n",
+    "    \n",
+    "    # Check if plots exist\n",
+    "    plots_dir = Path('outputs/hybrid_strategies_plots')\n",
+    "    if plots_dir.exists():\n",
+    "        plot_files = [\n",
+    "            'hybrid_strategies_comparison_all.png',\n",
+    "            'micro_precision.png',\n",
+    "            'micro_recall.png',\n",
+    "            'hamming_loss.png',\n",
+    "            'map.png',\n",
+    "            'example_based_accuracy.png'\n",
+    "        ]\n",
+    "        \n",
+    "        for plot_file in plot_files:\n",
+    "            plot_path = plots_dir / plot_file\n",
+    "            if plot_path.exists():\n",
+    "                files_to_download.append(plot_path)\n",
+    "                print(f\"✅ Plot hazır: {plot_path}\")\n",
+    "    \n",
     "    # Download files if on Colab\n",
     "    try:\n",
     "        from google.colab import files\n",
-    "        files.download(str(results_file))\n",
-    "        files.download(str(csv_file))\n",
-    "        print(\"✅ Dosyalar indirildi\")\n",
+    "        for file_path in files_to_download:\n",
+    "            files.download(str(file_path))\n",
+    "        print(f\"\\n✅ {len(files_to_download)} dosya indirildi:\")\n",
+    "        print(f\"   - 1 JSON (results)\")\n",
+    "        print(f\"   - 1 CSV (comparison table)\")\n",
+    "        print(f\"   - {len(files_to_download) - 2} PNG (plots)\")\n",
     "    except ImportError:\n",
-    "        print(\"💡 Colab değil, dosyalar sadece kaydedildi\")"
+    "        print(f\"\\n💡 Colab değil, {len(files_to_download)} dosya kaydedildi\")\n",
+    "        print(f\"   Dosyalar: outputs/ klasöründe\")"
    ]
   },
   {
