Add Precision@10 and Recall@10 to comparison plots and CSV export

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -3030,8 +3030,10 @@
     "            'mAP': results.get('mean_average_precision', 0),\n",
     "            'Hamming Loss': results.get('hamming_loss', 0),\n",
     "            'Example-based Accuracy': results.get('example_based_accuracy', 0),\n",
+    "            'Precision@5': results.get('precision_at_5', 0),\n",
     "            'Recall@5': results.get('recall_at_5', 0),\n",
-    "            'Precision@5': results.get('precision_at_5', 0)\n",
+    "            'Precision@10': results.get('precision_at_10', 0),\n",
+    "            'Recall@10': results.get('recall_at_10', 0)\n",
     "        })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
@@ -3048,6 +3050,8 @@
     "    print(f\"\\n🏆 EN İYİ STRATEJİ: {best_strategy}\")\n",
     "    print(f\"   mAP (Ranking Quality): {best_map:.4f}\")\n",
     "    print(f\"   Micro F1 Score: {best_f1:.4f}\")\n",
+    "    print(f\"   Micro Precision: {df_comparison.iloc[0]['Micro Precision']:.4f}\")\n",
+    "    print(f\"   Micro Recall: {df_comparison.iloc[0]['Micro Recall']:.4f}\")\n",
     "    \n",
     "    # Compare to baseline if exists\n",
     "    if 'baseline' in all_test_results:\n",
@@ -3148,8 +3152,41 @@
     "        plt.savefig(f'{plots_dir}/example_based_accuracy.png', dpi=300, bbox_inches='tight')\n",
     "        plt.close()\n",
     "        \n",
-    "        # Combined plot (4 panels)\n",
-    "        fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "        # 6. Precision@5 vs Precision@10\n",
+    "        fig6, ax6 = plt.subplots(figsize=(10, 6))\n",
+    "        width = 0.35\n",
+    "        ax6.bar(x - width/2, df_comparison['Precision@5'].tolist(), width, label='Precision@5', alpha=0.8, color='teal')\n",
+    "        ax6.bar(x + width/2, df_comparison['Precision@10'].tolist(), width, label='Precision@10', alpha=0.8, color='navy')\n",
+    "        ax6.set_xlabel('Strategy', fontsize=12)\n",
+    "        ax6.set_ylabel('Precision@K', fontsize=12)\n",
+    "        ax6.set_title('Hybrid Strategies: Precision@5 vs Precision@10 Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax6.set_xticks(x)\n",
+    "        ax6.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax6.legend()\n",
+    "        ax6.grid(axis='y', alpha=0.3)\n",
+    "        ax6.set_ylim([0, 1])\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/precision_at_k.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 7. Recall@5 vs Recall@10\n",
+    "        fig7, ax7 = plt.subplots(figsize=(10, 6))\n",
+    "        ax7.bar(x - width/2, df_comparison['Recall@5'].tolist(), width, label='Recall@5', alpha=0.8, color='coral')\n",
+    "        ax7.bar(x + width/2, df_comparison['Recall@10'].tolist(), width, label='Recall@10', alpha=0.8, color='crimson')\n",
+    "        ax7.set_xlabel('Strategy', fontsize=12)\n",
+    "        ax7.set_ylabel('Recall@K', fontsize=12)\n",
+    "        ax7.set_title('Hybrid Strategies: Recall@5 vs Recall@10 Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax7.set_xticks(x)\n",
+    "        ax7.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax7.legend()\n",
+    "        ax7.grid(axis='y', alpha=0.3)\n",
+    "        ax7.set_ylim([0, 1])\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/recall_at_k.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # Combined plot (6 panels: 3x2 layout)\n",
+    "        fig, axes = plt.subplots(3, 2, figsize=(16, 18))\n",
     "        \n",
     "        # Panel 1: Micro Precision & Recall\n",
     "        width = 0.35\n",
@@ -3193,18 +3230,44 @@
     "        axes[1, 1].grid(axis='y', alpha=0.3)\n",
     "        axes[1, 1].set_ylim([0, 1])\n",
     "        \n",
+    "        # Panel 5: Precision@5 vs @10\n",
+    "        axes[2, 0].bar(x - width/2, df_comparison['Precision@5'].tolist(), width, label='P@5', alpha=0.8, color='teal')\n",
+    "        axes[2, 0].bar(x + width/2, df_comparison['Precision@10'].tolist(), width, label='P@10', alpha=0.8, color='navy')\n",
+    "        axes[2, 0].set_xlabel('Strategy')\n",
+    "        axes[2, 0].set_ylabel('Precision@K')\n",
+    "        axes[2, 0].set_title('Precision@5 vs Precision@10')\n",
+    "        axes[2, 0].set_xticks(x)\n",
+    "        axes[2, 0].set_xticklabels(strategies, rotation=45, ha='right', fontsize=8)\n",
+    "        axes[2, 0].legend()\n",
+    "        axes[2, 0].grid(axis='y', alpha=0.3)\n",
+    "        axes[2, 0].set_ylim([0, 1])\n",
+    "        \n",
+    "        # Panel 6: Recall@5 vs @10\n",
+    "        axes[2, 1].bar(x - width/2, df_comparison['Recall@5'].tolist(), width, label='R@5', alpha=0.8, color='coral')\n",
+    "        axes[2, 1].bar(x + width/2, df_comparison['Recall@10'].tolist(), width, label='R@10', alpha=0.8, color='crimson')\n",
+    "        axes[2, 1].set_xlabel('Strategy')\n",
+    "        axes[2, 1].set_ylabel('Recall@K')\n",
+    "        axes[2, 1].set_title('Recall@5 vs Recall@10')\n",
+    "        axes[2, 1].set_xticks(x)\n",
+    "        axes[2, 1].set_xticklabels(strategies, rotation=45, ha='right', fontsize=8)\n",
+    "        axes[2, 1].legend()\n",
+    "        axes[2, 1].grid(axis='y', alpha=0.3)\n",
+    "        axes[2, 1].set_ylim([0, 1])\n",
+    "        \n",
     "        plt.tight_layout()\n",
     "        combined_plot_path = f'{plots_dir}/hybrid_strategies_comparison_all.png'\n",
     "        plt.savefig(combined_plot_path, dpi=300, bbox_inches='tight')\n",
     "        plt.show()\n",
     "        \n",
     "        print(f\"\\n📊 Plots saved:\")\n",
-    "        print(f\"    - {plots_dir}/hybrid_strategies_comparison_all.png (combined)\")\n",
+    "        print(f\"    - {plots_dir}/hybrid_strategies_comparison_all.png (combined 6-panel)\")\n",
     "        print(f\"    - {plots_dir}/micro_precision.png\")\n",
     "        print(f\"    - {plots_dir}/micro_recall.png\")\n",
     "        print(f\"    - {plots_dir}/hamming_loss.png\")\n",
     "        print(f\"    - {plots_dir}/map.png\")\n",
     "        print(f\"    - {plots_dir}/example_based_accuracy.png\")\n",
+    "        print(f\"    - {plots_dir}/precision_at_k.png (P@5 vs P@10)\")\n",
+    "        print(f\"    - {plots_dir}/recall_at_k.png (R@5 vs R@10)\")\n",
     "    \n",
     "    print(\"\\n\")"
    ]
@@ -3270,10 +3333,10 @@
     "            'mAP': results.get('mean_average_precision', 0),\n",
     "            'Hamming_Loss': results.get('hamming_loss', 0),\n",
     "            'Example_based_Accuracy': results.get('example_based_accuracy', 0),\n",
-    "            'Recall_at_5': results.get('recall_at_5', 0),\n",
     "            'Precision_at_5': results.get('precision_at_5', 0),\n",
-    "            'Recall_at_10': results.get('recall_at_10', 0),\n",
-    "            'Precision_at_10': results.get('precision_at_10', 0)\n",
+    "            'Recall_at_5': results.get('recall_at_5', 0),\n",
+    "            'Precision_at_10': results.get('precision_at_10', 0),\n",
+    "            'Recall_at_10': results.get('recall_at_10', 0)\n",
     "        })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
@@ -3294,7 +3357,9 @@
     "            'micro_recall.png',\n",
     "            'hamming_loss.png',\n",
     "            'map.png',\n",
-    "            'example_based_accuracy.png'\n",
+    "            'example_based_accuracy.png',\n",
+    "            'precision_at_k.png',\n",
+    "            'recall_at_k.png'\n",
     "        ]\n",
     "        \n",
     "        for plot_file in plot_files:\n",
