Add Precision@5 chart to Part A comparison

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1588,6 +1588,37 @@
     "        plt.close()\n",
     "        print(f\"  ✓ Recall@5 line chart saved\")\n",
     "    \n",
+    "    # ========== PRECISION@5 LINE CHART ==========\n",
+    "    if 'precision_at_5' in aug_df.columns:\n",
+    "        p5 = aug_df['precision_at_5'].tolist()\n",
+    "        \n",
+    "        fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "        ax.plot(x_pos, p5, marker='D', linewidth=2.5, markersize=10, \n",
+    "                color='#17A589', label='Precision@5')\n",
+    "        ax.fill_between(x_pos, p5, alpha=0.2, color='#17A589')\n",
+    "        \n",
+    "        # Add best score marker\n",
+    "        add_best_marker(ax, p5, x_pos)\n",
+    "        \n",
+    "        ax.set_xticks(x_pos)\n",
+    "        ax.set_xticklabels(strategies, rotation=45, ha='right')\n",
+    "        ax.set_ylabel('Precision@5', fontsize=12)\n",
+    "        ax.set_title('Augmentation Strategies: Precision@5 Comparison', fontsize=14, fontweight='bold')\n",
+    "        ax.grid(axis='y', alpha=0.3, linestyle='--')\n",
+    "        ax.set_ylim([min(p5)*0.95, max(p5)*1.08])\n",
+    "        ax.legend(loc='upper right')\n",
+    "        \n",
+    "        # Add value labels on points\n",
+    "        for i, val in enumerate(p5):\n",
+    "            ax.text(i, val - (max(p5) - min(p5))*0.04, f'{val:.4f}', \n",
+    "                    ha='center', fontsize=9, \n",
+    "                    bbox=dict(boxstyle='round,pad=0.3', facecolor='white', alpha=0.8, edgecolor='gray'))\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{plots_dir}/precision_5_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        print(f\"  ✓ Precision@5 line chart saved\")\n",
+    "    \n",
     "    # ========== MICRO PRECISION LINE CHART ==========\n",
     "    if 'micro_precision' in aug_df.columns:\n",
     "        micro_prec = aug_df['micro_precision'].tolist()\n",
@@ -1690,6 +1721,7 @@
     "print(\"    - micro_f1_comparison.png\")\n",
     "print(\"    - map_comparison.png\")\n",
     "print(\"    - recall_5_comparison.png\")\n",
+    "print(\"    - precision_5_comparison.png\")\n",
     "print(\"    - micro_precision_comparison.png\")\n",
     "print(\"    - micro_recall_comparison.png\")\n",
     "print(\"=\"*80)\n",
@@ -3115,6 +3147,7 @@
     "        results = result_dict['results']\n",
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
+    "            'Training_Time_min': result_dict.get('training_time_min', 0),\n",
     "            'Micro F1': results.get('micro_f1', 0),\n",
     "            'mAP': results.get('mean_average_precision', 0),\n",
     "            'Hamming Loss': results.get('hamming_loss', 0),\n",
@@ -3279,14 +3312,14 @@
     "        plt.savefig(f'{plots_dir}/recall_at_5.png', dpi=300, bbox_inches='tight')\n",
     "        plt.close()\n",
     "        \n",
-    "        # 6. Recall@10\n",
+    "        # 6. Precision@5\n",
     "        fig6, ax6 = plt.subplots(figsize=(12, 7))\n",
-    "        values = df_comparison['Recall@10'].tolist()\n",
-    "        ax6.plot(x, values, marker='o', linewidth=2.5, markersize=8, color='#E74C3C', label='Recall@10')\n",
-    "        ax6.fill_between(x, values, alpha=0.3, color='#E74C3C')\n",
+    "        values = df_comparison['Precision@5'].tolist()\n",
+    "        ax6.plot(x, values, marker='o', linewidth=2.5, markersize=8, color='#17A589', label='Precision@5')\n",
+    "        ax6.fill_between(x, values, alpha=0.3, color='#17A589')\n",
     "        ax6.set_xlabel('Strategy', fontsize=13, fontweight='bold')\n",
-    "        ax6.set_ylabel('Recall@10', fontsize=13, fontweight='bold')\n",
-    "        ax6.set_title('Hybrid Strategies: Recall@10 Comparison', fontsize=15, fontweight='bold', pad=20)\n",
+    "        ax6.set_ylabel('Precision@5', fontsize=13, fontweight='bold')\n",
+    "        ax6.set_title('Hybrid Strategies: Precision@5 Comparison', fontsize=15, fontweight='bold', pad=20)\n",
     "        ax6.set_xticks(x)\n",
     "        ax6.set_xticklabels(strategies, rotation=45, ha='right', fontsize=10)\n",
     "        ax6.grid(True, alpha=0.3, linestyle='--')\n",
@@ -3296,7 +3329,7 @@
     "                    bbox=dict(boxstyle='round,pad=0.3', facecolor='white', alpha=0.8))\n",
     "        add_best_marker(ax6, values, x)\n",
     "        plt.tight_layout()\n",
-    "        plt.savefig(f'{plots_dir}/recall_at_10.png', dpi=300, bbox_inches='tight')\n",
+    "        plt.savefig(f'{plots_dir}/precision_at_5.png', dpi=300, bbox_inches='tight')\n",
     "        plt.close()\n",
     "        \n",
     "        # 7. Hamming Loss (Lower is Better)\n",
@@ -3408,13 +3441,13 @@
     "        axes[2, 0].set_xticklabels(strategies, rotation=45, ha='right', fontsize=7)\n",
     "        axes[2, 0].grid(True, alpha=0.3)\n",
     "        \n",
-    "        # Panel 6: Recall@10\n",
-    "        values = df_comparison['Recall@10'].tolist()\n",
-    "        axes[2, 1].plot(x, values, marker='o', linewidth=2, markersize=6, color='#E74C3C')\n",
-    "        axes[2, 1].fill_between(x, values, alpha=0.3, color='#E74C3C')\n",
+    "        # Panel 6: Precision@5\n",
+    "        values = df_comparison['Precision@5'].tolist()\n",
+    "        axes[2, 1].plot(x, values, marker='o', linewidth=2, markersize=6, color='#17A589')\n",
+    "        axes[2, 1].fill_between(x, values, alpha=0.3, color='#17A589')\n",
     "        axes[2, 1].set_xlabel('Strategy', fontsize=10)\n",
-    "        axes[2, 1].set_ylabel('Recall@10', fontsize=10)\n",
-    "        axes[2, 1].set_title('Recall@10', fontsize=11, fontweight='bold')\n",
+    "        axes[2, 1].set_ylabel('Precision@5', fontsize=10)\n",
+    "        axes[2, 1].set_title('Precision@5', fontsize=11, fontweight='bold')\n",
     "        axes[2, 1].set_xticks(x)\n",
     "        axes[2, 1].set_xticklabels(strategies, rotation=45, ha='right', fontsize=7)\n",
     "        axes[2, 1].grid(True, alpha=0.3)\n",
@@ -3453,7 +3486,7 @@
     "        print(f\"    - {plots_dir}/micro_precision.png\")\n",
     "        print(f\"    - {plots_dir}/micro_recall.png\")\n",
     "        print(f\"    - {plots_dir}/recall_at_5.png\")\n",
-    "        print(f\"    - {plots_dir}/recall_at_10.png\")\n",
+    "        print(f\"    - {plots_dir}/precision_at_5.png\")\n",
     "        print(f\"    - {plots_dir}/hamming_loss.png\")\n",
     "        print(f\"    - {plots_dir}/example_based_accuracy.png\")\n",
     "    \n",
